--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -3,18 +3,10 @@ graft examples
 graft src
 graft tests
 
-include *.komodoproject
-include .bumpversion.cfg
-include .coveragerc
-include .isort.cfg
-include .pylintrc
-
-include AUTHORS.rst
-include CHANGELOG.rst
-include CONTRIBUTING.rst
+include CONTRIBUTING.md
 include LICENSE
-include README.rst
+include README.md
 
-include tox.ini .travis.yml appveyor.yml
+include tox.ini .travis.yml
 
 global-exclude *.py[co] __pycache__
