Setting up dev env.

--- a/tox.ini
+++ b/tox.ini
@@ -4,6 +4,7 @@ envlist =
     check,
     {py26,py27,py33,py34,pypy},
     {py26,py27,py33,py34,pypy}-nocover,
+    {py26,py27,py33,py34,pypy}-shell,
     report,
     docs
 
@@ -15,13 +16,13 @@ basepython =
     py33: python3.3
     py34: python3.4
     {clean,check,report,coveralls}: python3.4
+
 setenv =
     PYTHONPATH={toxinidir}/tests
     PYTHONUNBUFFERED=yes
 deps =
-    coverage
+    -rrequirements.txt
 testspath = {toxinidir}/tests/test_lcmap_client.py
-commands = coverage run {posargs:{[testenv]testspath}}
 usedevelop = true
 
 [testenv:spell]
@@ -101,4 +102,24 @@ usedevelop = false
 
 [testenv:pypy-nocover]
 commands = python {posargs:{[testenv]testspath}}
+usedevelop = false
+
+[testenv:py26-shell]
+commands = python
+usedevelop = false
+
+[testenv:py27-shell]
+commands = python
+usedevelop = false
+
+[testenv:py33-shell]
+commands = python
+usedevelop = false
+
+[testenv:py34-shell]
+commands = python
+usedevelop = false
+
+[testenv:pypy-shell]
+commands = python
 usedevelop = false
