--- a/tox.ini
+++ b/tox.ini
@@ -107,19 +107,24 @@ usedevelop = false
 [testenv:py26-shell]
 commands = python
 usedevelop = false
+passenv = *
 
 [testenv:py27-shell]
 commands = python
 usedevelop = false
+passenv = *
 
 [testenv:py33-shell]
 commands = python
 usedevelop = false
+passenv = *
 
 [testenv:py34-shell]
 commands = python
 usedevelop = false
+passenv = *
 
 [testenv:pypy-shell]
 commands = python
 usedevelop = false
+passenv = *
