Removed py26 and py33.

--- a/tox.ini
+++ b/tox.ini
@@ -2,18 +2,16 @@
 envlist =
     clean,
     check,
-    {py26,py27,py33,py34,pypy},
-    {py26,py27,py33,py34,pypy}-nocover,
-    {py26,py27,py33,py34,pypy}-shell,
+    {py27,py34,pypy},
+    {py27,py34,pypy}-nocover,
+    {py27,py34,pypy}-shell,
     report,
     docs
 
 [testenv]
 basepython =
     pypy: pypy
-    py26: python2.6
     {py27,docs}: python2.7
-    py33: python3.3
     py34: python3.4
     {clean,check,report,coveralls}: python3.4
 
@@ -84,15 +82,7 @@ commands = coverage erase
 usedevelop = true
 deps = coverage
 
-[testenv:py26-nocover]
-commands = python {posargs:{[testenv]testspath}}
-usedevelop = false
-
 [testenv:py27-nocover]
-commands = python {posargs:{[testenv]testspath}}
-usedevelop = false
-
-[testenv:py33-nocover]
 commands = python {posargs:{[testenv]testspath}}
 usedevelop = false
 
@@ -104,17 +94,7 @@ usedevelop = false
 commands = python {posargs:{[testenv]testspath}}
 usedevelop = false
 
-[testenv:py26-shell]
-commands = python
-usedevelop = false
-passenv = *
-
 [testenv:py27-shell]
-commands = python
-usedevelop = false
-passenv = *
-
-[testenv:py33-shell]
 commands = python
 usedevelop = false
 passenv = *
