WIP: Handle update tile response add tests

--- a/tox.ini
+++ b/tox.ini
@@ -22,6 +22,8 @@ deps =
     -rrequirements.txt
 testspath = {toxinidir}/tests/test_lcmap_client.py
 usedevelop = true
+commands =
+    nosetests
 
 [testenv:spell]
 setenv =
