Added linting-only support.

--- a/tox.ini
+++ b/tox.ini
@@ -2,6 +2,8 @@
 envlist =
     clean,
     check,
+    lint,
+    {py27,py34}-lint,
 ;    {py27,py34,pypy},
 ;    {py27,py34,pypy}-nocover,
 ;    {py27,py34,pypy}-shell,
@@ -20,12 +22,20 @@ basepython =
 setenv =
     PYTHONPATH={toxinidir}/tests
     PYTHONUNBUFFERED=yes
-deps =
-    -r{toxinidir}/requirements.txt
+deps = -r{toxinidir}/requirements.txt
 testspath = {toxinidir}/tests/test_lcmap_client.py
 usedevelop = true
-commands =
-    nosetests
+commands = nosetests
+
+[testenv:py27-lint]
+basepython = python2.7
+deps = flake8
+commands = flake8 {toxinidir}/src
+
+[testenv:py34-lint]
+basepython = python3.4
+deps = flake8
+commands = flake8 {toxinidir}/src
 
 [testenv:check]
 basepython = python3.4
@@ -36,7 +46,7 @@ deps =
     pygments
 usedevelop = true
 commands =
-    python setup.py check --strict --metadata
+    {envpython} setup.py check --strict --metadata
     check-manifest {toxinidir}
     flake8 src
 
