Split reqs into separate files.
Docker builds are failing on GDAL (but that's okay -- they're already installed
on the system using the GIS repos). For installs that need GDAL from pip, the
additional -rrequirements/extra.txt can be used.

--- a/tox.ini
+++ b/tox.ini
@@ -22,7 +22,7 @@ basepython =
 setenv =
     PYTHONPATH={toxinidir}/tests
     PYTHONUNBUFFERED=yes
-deps = -r{toxinidir}/requirements.txt
+deps = -r{toxinidir}/requirements/base.txt
 testspath = {toxinidir}/tests/test_lcmap_client.py
 usedevelop = true
 commands = nosetests
