--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: python
 python: 2.7
-sudo: false
+sudo: required
 env:
   global:
     LD_PRELOAD=/lib/x86_64-linux-gnu/libSegFault.so
@@ -12,22 +12,15 @@ before_install:
   - python --version
   - uname -a
   - lsb_release -a
-  #- sudo apt-get install -y python-gdal python-numpy python-pandas
-  #- sudo apt-get install -y python3-gdal python3-numpy python3-pandas
+  - sudo apt-get install -y python-gdal python-numpy python-pandas
+  - sudo apt-get install -y python3-gdal python3-numpy python3-pandas
 install:
   - pip install tox
+before_script:
+  - 
 script:
   - tox -v
 notifications:
   email:
     on_success: never
     on_failure: always
-addons:
-  apt:
-    sources:
-      - python-gdal
-      - python-numpy
-      - python-pandas
-      - python3-gdal
-      - python3-numpy
-      - python3-pandas
