No virtualenv for py3.

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ before_install:
   - uname -a
   - lsb_release -a
   - sudo apt-get install -y python-gdal python-numpy python-pandas python-virtualenv
-  - sudo apt-get install -y python3-gdal python3-numpy python3-virtualenv
+  - sudo apt-get install -y python3-gdal python3-numpy
 install:
   - pip install tox
   - pip install pandas
