--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ install:
   - pip install tox
   - pip install pandas
 before_script:
-  - test/support/setup_deps.sh
+  - tests/support/setup_deps.sh
 script:
   - tox -v
 notifications:
