Don't use extras on Travis.

--- a/tox.ini
+++ b/tox.ini
@@ -15,9 +15,7 @@ basepython =
 setenv =
     PYTHONPATH={toxinidir}/tests
     PYTHONUNBUFFERED=yes
-deps =
-    -r{toxinidir}/requirements/base.txt
-    -r{toxinidir}/requirements/extra.txt
+deps = -r{toxinidir}/requirements/base.txt
 testspath = {toxinidir}/tests
 commands = nosetests
 sitepackages = True
