--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,11 @@
 language: python
-python: 2.7
+python:
+  - "2.7"
+  - "3.4"
 sudo: required
 env:
   global:
     LD_PRELOAD=/lib/x86_64-linux-gnu/libSegFault.so
-  matrix:
-    - TOXENV=py27
-    - TOXENV=py34
 before_install:
   - python --version
   - uname -a
@@ -15,6 +14,7 @@ before_install:
   - sudo apt-get install -y python3-gdal python3-numpy
 install:
   - pip install tox
+  - pip install tox-travis
   - pip install pandas
 before_script:
   - tests/support/setup_deps.sh
