--- a/tox.ini
+++ b/tox.ini
@@ -6,6 +6,10 @@ envlist =
     {py27,py34}-lint,
     {py27,py34}
 
+[tox:travis]
+2.7 = py27-lint, py27
+3.4 = py34-lint, py34
+
 [testenv]
 basepython =
     py27: python2.7
