Set up wheelhouse that matplotlib's .travis.yml uses.

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,8 @@ sudo: required
 env:
   global:
     LD_PRELOAD=/lib/x86_64-linux-gnu/libSegFault.so
+    WHEELHOST=travis-wheels.scikit-image.org
+    WHEELHOUSE="http://travis-wheels.scikit-image.org
 before_install:
   - python --version
   - uname -a
@@ -18,8 +20,7 @@ install:
   - pip install --upgrade setuptools
   - pip install tox
   - pip install tox-travis
-  - pip install pandas
-  - wheelhouse_pip_install numpy==1.6 pandas
+  - retry pip install --timeout=60 --no-index --trusted-host $WHEELHOST --find-links $WHEELHOUSE numpy==1.6 pandas
 before_script:
   - tests/support/setup_deps.sh
 script:
