--- a/.travis.yml
+++ b/.travis.yml
@@ -15,12 +15,12 @@ before_install:
   - lsb_release -a
     #  - sudo apt-get install python-gdal python-virtualenv
     #- sudo apt-get install python3-gdal
-  - sudo apt-get install python-pip
-  - sudo apt-get install gfortran
-  - sudo apt-get install g++
-  - sudo apt-get install python-dev
-  - sudo apt-get install libgdal1h
-  - sudo apt-get install libgdal1-dev
+  - sudo apt-get -y install python-pip
+  - sudo apt-get -y install gfortran
+  - sudo apt-get -y install g++
+  - sudo apt-get -y install python-dev
+  - sudo apt-get -y install libgdal1h
+  - sudo apt-get -y install libgdal1-dev
 install:
   - pip install tox
   - pip install tox-travis
