--- a/.travis.yml
+++ b/.travis.yml
@@ -21,10 +21,10 @@ before_install:
   - sudo apt-get -y install python-dev
   - sudo apt-get -y install libgdal1h
   - sudo apt-get -y install libgdal1-dev
-install:
   - pip install tox
   - pip install tox-travis
-  - pip install .
+install:
+  - pip install -e .
 before_script:
   - tests/support/setup_deps.sh
 script:
