--- a/.travis.yml
+++ b/.travis.yml
@@ -25,6 +25,7 @@ before_install:
   - pip install tox-travis
 install:
     - pip install tox-travis
+    - pip install -r requirements.txt
 before_script: tests/support/setup_deps.sh
 script: tox -v
 notifications:
