--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -5,8 +5,8 @@ include CONTRIBUTING.md
 include LICENSE
 include README.md
 include Makefile
-recursive-include requirements *.txt
-
-include tox.ini .travis.yml
+include tox.ini
+include .travis.yml
+#recursive-include requirements *.txt
 
 global-exclude *.py[co] __pycache__
