--- a/tox.ini
+++ b/tox.ini
@@ -19,7 +19,7 @@ basepython =
 setenv =
     PYTHONPATH={toxinidir}/tests
     PYTHONUNBUFFERED=yes
-deps = -r{toxinidir}/requirements/base.txt
+#deps = -r{toxinidir}/requirements/base.txt
 testspath = {toxinidir}/tests
 commands = nosetests
 sitepackages = True
