rename src dir, strip gdal related funcs from setup.py

--- a/tox.ini
+++ b/tox.ini
@@ -27,12 +27,12 @@ sitepackages = True
 [testenv:py27-lint]
 basepython = python2.7
 deps = flake8
-commands = flake8 {toxinidir}/src
+commands = flake8 {toxinidir}/lcmap_client
 
 [testenv:py34-lint]
 basepython = python3.4
 deps = flake8
-commands = flake8 {toxinidir}/src
+commands = flake8 {toxinidir}/lcmap_client
 
 [testenv:check]
 basepython = python3.4
